# mihomo-tui

./: Cargo.toml  README.md  mihomo-api.md
src/: constants.rs  main.rs  settings.rs
src/app/: actions.rs  cmd.rs  event.rs  mod.rs  msg.rs  update.rs
src/app/ui/: content.rs  footer.rs  header.rs  log.rs  mod.rs  popup.rs  running_info.rs  sidebar.rs
src/command/: mihomo.rs  mod.rs  system_proxy.rs
src/config/: mihomo_config.rs  mod.rs  node.rs
src/log/: mod.rs
src/test/: mod.rs
