[package]
name = "mihomors"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
crossterm = "0.29.0"
dirs = "6.0.0"
indexmap = { version = "2", features = ["serde"] }
md5 = "0.8.0"
ratatui = "0.30.2"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.27.0"
